# who-stole-my-coins

./: ReadMe.md
caculate/: CMakeLists.txt  package.xml
caculate/include/caculate/: get_score.hpp
caculate/src/: get_score.cpp
chasing_coins/: package.xml  setup.cfg  setup.py
chasing_coins/launch/: chasing_coins.launch.py  start_world.launch.py
chasing_coins/models/crazy_coins/: model.config  model.sdf
chasing_coins/points/: points.csv
chasing_coins/scripts/: born.py
chasing_coins/urdf/: chasing_car.urdf.xacro
chasing_coins/urdf/chassis/: hrt_car_base.urdf.xacro  wheels.urdf.xacro
chasing_coins/urdf/sensors/: imu.urdf.xacro
chasing_coins/worlds/: coins.world
coins_manager_plugin/: CMakeLists.txt  package.xml
coins_manager_plugin/include/: coins_manager_plugin.hpp  demo2.hpp
coins_manager_plugin/src/: coins_manager_plugin.cpp  demo2.cpp
control_tutorial/: CMakeLists.txt  package.xml
crazy_coins/: model.sdf
